syntax = "proto3";
package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest{
  Greeting greeting  = 1;
}

message GreetResponse{
  string result = 1;
}

message ManyGreetRequest{
  Greeting greeting = 1;
}

message ManyGreetResponse{
  string result = 1;
}

message LongGreetRequest{
  Greeting greeting = 1;
}

message LongGreetResponse{
  string result = 1;
}

message PushFileRequest{
  bytes data_chunks =1;
}

message PushFileResponse{
  string result = 1;
}

service GreetService{
  rpc Greet(GreetRequest) returns (GreetResponse){};
}

service ManyGreetService{
  rpc ManyGreet(ManyGreetRequest) returns ( stream ManyGreetResponse){};
}

service LongGreetService{
  rpc LongGreet( stream LongGreetRequest) returns (LongGreetResponse){};
}

service FileStreamService{
  rpc pushFile (stream PushFileRequest) returns (PushFileResponse){};
}